--- a/style/Globalstyle/style.css
+++ b/style/Globalstyle/style.css
@@ -96,30 +96,43 @@ body {
 main {
   background-color: black;
   opacity: 0.8;
-  height: 500px;
+  height: 550px;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: 60% 40%;
+  grid-template-rows: 1fr 1fr 100px;
+  grid-template-columns: repeat(4, 1fr);
 }
 main .info {
   padding-left: 10px;
   grid-row: 1/2;
-  grid-column: 1/2;
+  grid-column: 1/3;
 }
 main .button {
   grid-row: 2/3;
+  grid-column: 1/3;
+  padding-left: 10px;
+  align-self: start;
+  justify-self: start;
+}
+main .knife > img {
+  grid-row: 1/3;
+  grid-column: 3/5;
+  height: 400px;
+  width: 400px;
+}
+main .endOne {
+  grid-row: 3/4;
   grid-column: 1/2;
   padding-left: 10px;
 }
-main .knife {
-  grid-row: 1/3;
+main .endTwo {
+  grid-row: 3/4;
   grid-column: 2/3;
-  height: 100px;
-  width: 150px;
 }
-
-.endContainer {
-  padding-left: 10px;
-  display: flex;
-  justify-content: space-around;
+main .endThree {
+  grid-row: 3/4;
+  grid-column: 3/4;
+}
+main .endFour {
+  grid-row: 3/4;
+  grid-column: 4/5;
 }/*# sourceMappingURL=style.css.map */
