--- a/style/Pageelement/_main.scss
+++ b/style/Pageelement/_main.scss
@@ -2,36 +2,49 @@
 @import '../vars';
 body{
     background: url(../assets/images/751\ 1.png) no-repeat;
-    font-family: $font;
+font-family: $font;
     color: #FFFFFF;
 }
 main{
     background-color: black;
     opacity: 0.8;
-    height: 500px;
+    height: 550px;
     display: grid;
-    grid-template-rows:repeat(2,1fr);
-    grid-template-columns:60% 40%;
+    grid-template-rows:1fr 1fr 100px;
+    grid-template-columns:repeat(4,1fr);
     .info{
         padding-left: 10px;
         grid-row: 1/2;
-        grid-column: 1/2;
+        grid-column: 1/3;
 }
 .button{
     grid-row: 2/3;
-        grid-column: 1/2;
+        grid-column: 1/3;
         padding-left: 10px;
+    align-self: start;
+    justify-self: start;
 }
-.knife{
+.knife > img {
     grid-row: 1/3;
-    grid-column: 2/3;
-height: 100px;
-width: 150px;
+    grid-column: 3/5;
+    height: 400px;
+    width: 400px;
 }
+.endOne{
+    grid-row: 3/4;
+    grid-column: 1/2;
+    padding-left: 10px; 
 }
-.endContainer{
-    padding-left: 10px;
-    display: flex;
-    justify-content: space-around;
-
+.endTwo{
+    grid-row: 3/4;
+    grid-column: 2/3;   
+}
+.endThree{
+    grid-row: 3/4;
+    grid-column: 3/4;     
+}
+.endFour{
+    grid-row: 3/4;
+    grid-column: 4/5;   
+}
 }
